Fixes bugs on contact, adds Arabic language and updates javascript files
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1611 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -1,68 +1,69 @@
 arb:
   rights:
-    #>accountize: 'Transfer commercial data in accountancy'
-    #>backup_company: 'Make and reload backups'
-    #>cancel_invoices: 'Cancel invoices'
-    #>change_prices_on_sale: 'Change prices on sales'
-    #>close_journals: 'Close and reopen journals'
-    #>configure_company: 'Configure the options of the company'
-    #>consult_accounting_documents: 'Consult accounting documents'
-    #>consult_entities: 'Consult the people'
-    #>consult_entries: 'Consult the journal entries'
-    #>consult_invoices: 'Consult the invoices'
-    #>consult_prices: 'Consult the prices'
-    #>consult_products: 'Consult the products'
-    #>consult_purchases: 'Consult the purchases'
-    #>consult_sale_orders: 'Consult the sales'
-    #>consult_stocks: 'Consult the stocks'
-    #>consult_tracking: 'Consult the tracking informations'
-    #>extract_listings: 'Export listings'
-    #>give_discounts_on_sale: 'Set reduction on sales'
-    #>import_data: 'Import data from other software'
-    #>import_export_entities: 'Import, export people listings'
-    #>mail_to_listings: 'Send mail to lists'
-    #>manage_accounts: 'Manage accounts'
-    #>manage_areas: 'Manage areas'
-    #>manage_bank_statements: 'Point bank statements'
-    #>manage_cashes: 'Manage cashes'
-    #>manage_complements: 'Manage personalized fields'
-    #>manage_delays: 'Manage delays'
-    #>manage_delivery_modes: 'Manage delivery modes'
-    #>manage_districts: 'Manage districts'
-    #>manage_document_templates: 'Manage document templates'
-    #>manage_embankments: 'Manage embankments'
-    #>manage_entities: 'Manage people'
-    #>manage_entities_natures: 'Manage people natures'
-    #>manage_entity_categories: 'Manage people categories'
-    #>manage_entity_links: 'Manage people links'
-    #>manage_entries: 'Manage journal entries'
-    #>manage_estimates: 'Create and update estimates'
-    #>manage_events: 'Manage events'
-    #>manage_financialyears: 'Manage and close financial years'
-    #>manage_inventories: 'Manage inventories'
-    #>manage_journals: 'Manage, close and reopen journals'
-    #>manage_listings: 'Manage listings'
-    #>manage_locations: 'Manage warehouse'
-    #>manage_mandates: 'Manage mandates'
-    #>manage_observations: 'Manage observations'
-    #>manage_operations: 'Manage tasks'
-    #>manage_payment_modes: 'Manage payment modes'
-    #>manage_prices: 'Manage prices'
-    #>manage_products: 'Manage products'
-    #>manage_purchases: 'Manage purchase orders'
-    #>manage_sale_order_natures: 'Mange sale orders natures'
-    #>manage_sale_orders: 'Manages sale orders'
-    #>manage_sale_payments: 'Manage sale payments'
-    #>manage_shapes: 'Manage fields'
-    #>manage_shelves: 'Manage shelves'
-    #>manage_stock_moves: 'Manage stock moves'
-    #>manage_subscriptions: 'Manage subscriptions'
-    #>manage_taxes: 'Manage taxes'
-    #>manage_tools: 'Maange tools of production'
-    #>manage_transports: 'Manage transports'
-    #>manage_units: 'Manage units of measure'
-    #>manage_users: 'Manage users'
-    #>merge_entities: 'Merge people'
-    #>__minimum__: 'Access to the minimum'
-    #>__not_used__: 'Inaccessible'
-    #>print: 'Print'
+    accountize: 'مبادلة الاجراءات التجارية للمحاسبة'
+    administrate_accountancy: 'مدخل لوحدة المحاسبة' #!
+    backup_company: 'تطبيق / تحديث النسخ الاحتياطية'
+    cancel_invoices: 'الاحذ بالموجودات'
+    change_prices_on_sale: 'تغيير اسعار البيع'
+    close_journals: 'فتح واغلاق الدفاتر اليومية'
+    configure_company: 'تكوين خيارات الشركة'
+    consult_accounting_documents: 'مراجعة الوثائق المحاسبية'
+    consult_entities: 'مراحعة ملفات العملاء / الممولين'
+    consult_entries: 'مراجعة المدخلات'
+    consult_invoices: 'مراجعة الفواتير'
+    consult_prices: 'مراجعة الاسعار'
+    consult_products: 'مراجعة المنتجات'
+    consult_purchases: 'مراجعة المشتريات'
+    consult_sale_orders: 'مراجعة المبيعات'
+    consult_stocks: 'مراجعة حالة الاسهم'
+    consult_tracking: 'مراجعة المعلومات التتابعية'
+    extract_listings: '(تنفيذ الاستخراج (دون القدرة على التصور'
+    give_discounts_on_sale: 'منح التخفيضات التجارية للبيع'
+    import_data: 'استيراد البيانات من برامج اخرى'
+    import_export_entities: 'استيراد وتصدير ملفات العملاء / الممولين'
+    mail_to_listings: 'ادارة ارسال رسائل البريد الالكتروني بواسطة الاستخراج'
+    manage_accounts: 'ادارة الحسابات'
+    manage_areas: 'ادارة المناطق'
+    manage_bank_statements: 'كشوفات البيانات الحسابية'
+    manage_cashes: 'ادارة حسابات الخزينة'
+    manage_complements: 'ادارة الحقول المتخصصة'
+    manage_delays: 'ادارة التأخير'
+    manage_delivery_modes: 'ادارة انواع التسليم'
+    manage_districts: 'ادارة المقطعات'
+    manage_document_templates: 'ادارة نماذج الوثائق'
+    manage_embankments: 'ادارة الاقتطاعات المصرفية'
+    manage_entities: 'ادارة ملفات العملاء / الممولين'
+    manage_entities_natures: 'ادارة انواع الملفات'
+    manage_entity_categories: 'ادارة فئات الملفات'
+    manage_entity_links: 'ادارة الروابط بين الملفات'
+    manage_entries: 'ادارة المدخلات'
+    manage_estimates: 'انشاء وتعديل التقديرات'
+    manage_events: 'ادارة الاحداث'
+    manage_financialyears: 'ادارة وبدأ السنة المالية'
+    manage_inventories: 'ادارة عمبيات الجرد'
+    manage_journals: 'ادارة وفتح واغلاق الدفاتر اليومية'
+    manage_listings: 'ادارة المستخرج'
+    manage_locations: 'ادارة مواقع التخزين'
+    manage_mandates: 'ادارة التفويضات'
+    manage_observations: 'ادارة الملاحظات'
+    manage_operations: 'ادارة الاجراءات'
+    manage_payment_modes: 'ادارة طرق الدفع'
+    manage_prices: 'ادارة الاموال'
+    manage_products: 'ادارة المنتجات'
+    manage_purchases: 'ادارة المشتريات'
+    manage_sale_order_natures: 'ادارة انواع البيع'
+    manage_sale_orders: '(ادارة المبيعات (الاوامر والطلبات والاسعار'
+    manage_sale_payments: 'ادارة قواعد البيع'
+    manage_shapes: 'ادارة الهيئة'
+    manage_shelves: 'ادارة فئات المنتجات'
+    manage_stock_moves: 'ادارة حركات الاسهم'
+    manage_subscriptions: 'ادارة الاشتراكات'
+    manage_taxes: 'ادارة الضرائب'
+    manage_tools: 'ادارة ادوات المنتجات'
+    manage_transports: 'ادارة وسائل النقل'
+    manage_units: 'ادارة وحدات القياس'
+    manage_users: 'ادارة المستخدمين'
+    merge_entities: 'دمج ملفات العملاء / الممولين'
+    __minimum__: 'بلوغ الفاعلية كحد ادنى'
+    __not_used__: '(الحق الافتراضي (متعذر بلوغه'
+    print: 'الطباعة'
