--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -15,14 +15,14 @@ eng:
       #>bank_statement_delete: 'Bank statement delete'
       bank_statement_point: 'Point bank statement %{number}'
       bank_statement_update: 'Update bank statement %{number}'
-      bank_statements: 'Statement of Bank Accounts'
+      bank_statements: 'Bank statements'
       cash: '%{nature_label}: %{name}'
       cash_create: 'Add a new cash'
       #>cash_delete: 'Cash delete'
       cash_update: 'Update cash: %{name}'
       cashes: 'Cash'
       document_prepare: 'Choose the type of documents to print' #!
-      document_print: 'print, exportation'
+      document_print: 'Prints, exportations'
       draft_entries: 'Draft'
       financialyear: 'Period %{code}'
       financialyear_close: 'Close period'
@@ -188,17 +188,17 @@ eng:
       purchase_order_summary: 'Payments of the purchase order %{number}'
       purchase_order_update: 'Edit the purchase order: %{number}'
       purchase_orders: 'Purchase orders'
-      purchase_payment: 'Purchase payment #%{number} for %{payee}'
-      purchase_payment_create: 'Add a new purchase payment'
+      purchase_payment: 'Disbursement #%{number} for %{payee}'
+      purchase_payment_create: 'Add a new disbursement'
       #>purchase_payment_delete: 'Purchase payment delete'
-      purchase_payment_mode_create: 'Add a new purchase payment mode'
+      purchase_payment_mode_create: 'Add a new disbursement mode'
       #>purchase_payment_mode_delete: 'Purchase payment mode delete'
-      purchase_payment_mode_update: 'Edit the purchase payment mode'
-      purchase_payment_modes: 'Purchase payments modes'
+      purchase_payment_mode_update: 'Edit the disbursement mode'
+      purchase_payment_modes: 'Disbursements modes'
       purchase_payment_part_create: 'Pay the purchase order %{number}'
       #>purchase_payment_part_delete: 'Purchase payment part delete'
-      purchase_payment_update: 'Edit the purchase payment: %{number}'
-      purchase_payments: 'Purchase payments'
+      purchase_payment_update: 'Edit the disbursement: %{number}'
+      purchase_payments: 'Disbursements'
       sale_order: 'Sale order %{number}'
       #>sale_order_confirm: 'Sale order confirm'
       #>sale_order_contacts: 'Sale order contacts'
@@ -217,8 +217,8 @@ eng:
       sale_order_lines: 'Selection of the products for the estimate %{sale_order}'
       sale_order_nature_create: 'Add a new type of sale'
       #>sale_order_nature_delete: 'Sale order nature delete'
-      sale_order_nature_update: 'Edit the sale order nature: %{name}'
-      sale_order_natures: 'Sale order natures'
+      sale_order_nature_update: 'Edit the sale order type: %{name}'
+      sale_order_natures: 'Sale order types'
       sale_order_summary: 'Invoice and payments of the sale order %{number}'
       sale_order_update: 'Edit the sale order %{number}'
       sale_orders: 'Estimates and orders'
@@ -248,16 +248,16 @@ eng:
       stock_transfers: 'Transfers and loss'
       stocks: 'Stocks state'
       #>subscription_coordinates: 'Subscription coordinates'
-      subscription_create: 'Add anew subscription'
+      subscription_create: 'Add a new subscription'
       #>subscription_delete: 'Subscription delete'
       #>subscription_message: 'Subscription message'
       #>subscription_nature: 'Subscription nature'
-      subscription_nature_create: 'Add a new subscription nature'
+      subscription_nature_create: 'Add a new subscription type'
       #>subscription_nature_decrement: 'Subscription nature decrement'
       #>subscription_nature_delete: 'Subscription nature delete'
       #>subscription_nature_increment: 'Subscription nature increment'
-      subscription_nature_update: 'Edit the subscription nature: %{name}'
-      subscription_natures: 'Subscription natures'
+      subscription_nature_update: 'Edit the subscription type: %{name}'
+      subscription_natures: 'Subscription types'
       subscription_update: 'Update subscription: %{number} from %{start} to %{finish}'
       subscriptions: 'Subscriptions'
       #>sum_calculate: 'Sum calculate'
@@ -413,7 +413,7 @@ eng:
     account_supplier_to_create: 'Account supplier to create'
     account_tabbox:
       children: 'Children Account'
-      entities: 'Entities'
+      entities: 'People'
       journal_entries: 'Entry Journal'
     account_tangible_fixed_assets: 'Tangible Fixed Assets'
     account_untangible_fixed_assets: 'Untangible Fixed Assets'
@@ -485,9 +485,8 @@ eng:
       embankments: 'Transit Letters'
     cash_update: 'Update cash'
     cashes:
-      one: 'One'
-      other: 'Other'
-      zero: 'Zero'
+      one: '%{count} cash'
+      other: '%{count} cashes'
     catalog: 'Catalog'
     category: 'Category'
     category_name: 'Category'
@@ -530,9 +529,8 @@ eng:
     consult: 'Consult'
     contact: 'At'
     contacts:
-      one: 'One'
-      other: 'Other'
-      zero: 'Zero'
+      one: '%{count} contact'
+      other: '%{count} contacts'
     contains: 'Contains'
     coordinates: 'Coordinates'
     copy_of: 'Copy of %{source}'
@@ -571,7 +569,7 @@ eng:
     display: 'Display'
     display_help: 'Display help'
     district_x: '%{name} (%{code})'
-    document_natures: 'Document natures'
+    document_natures: 'Document types'
     document_templates: 'Document templates'
     dont_use_journal: '-- Do not use journal --'
     down: 'Down'
@@ -597,16 +595,15 @@ eng:
     end: 'to'
     entities_export: 'Export as a CSV file'
     entities_import: 'Import a CSV file'
-    entities_merge: 'Entities merge'
+    entities_merge: 'People merge'
     entity_category_update: 'Update category'
     entity_links:
-      one: 'One'
-      other: 'Other'
-      zero: 'Zero'
-    entity_print: 'Entity print'
-    entity_to_delete: 'Entity to delete'
-    entity_to_update: 'Entity to update'
-    entity_update: 'Entity update'
+      one: '%{count} link'
+      other: '%{count} links'
+    entity_print: 'Person print'
+    entity_to_delete: 'Person to delete'
+    entity_to_update: 'Person to update'
+    entity_update: 'Person update'
     entries: 'Entries'
     entries_to_point: 'Entries pointing to'
     error_no_file: 'No help is available for this part of the application (%{article}). Help has not yet been written. You can visit online website for more information.'
@@ -748,9 +745,8 @@ eng:
     management_index: 'Management index'
     management_rights: 'Management'
     mandates:
-      one: 'One mandate'
+      one: '%{count} mandate'
       other: '%{count} mandates'
-      zero: 'No mandates'
     mandates_fields: 'You have to fill at least one field'
     mandates_filters: 'You have to fill at least one filter'
     mandates_new_fields: 'You have to fill at least one new field'
@@ -788,7 +784,7 @@ eng:
     national_normal_vat_collected: 'National Normal Tax collected'
     national_reduce_vat_collected: 'National Reduced Tax collected'
     national_vat_collected: 'National Tax collected'
-    nature: 'Nature'
+    nature: 'Type'
     nb_enbankments:
       one: '%{count} transit letter to validate'
       other: '%{count} transit letters to validate'
@@ -876,9 +872,8 @@ eng:
       warning: 'Warning!'
     number: 'Number'
     observations:
-      one: 'One'
-      other: 'Other'
-      zero: 'Zero'
+      one: '%{count} observation'
+      other: '%{count} observations'
     on_account: 'On account'
     one_condition: 'One condition'
     operation_lines: 'Incoming and outgoing products'
@@ -955,12 +950,11 @@ eng:
     purchase_order_price_create: 'Add a new purchase price'
     purchase_order_update: 'Purchase order update'
     purchase_orders: 'Purchase orders'
-    purchase_payment_part_create: 'Purchase payment part create'
+    purchase_payment_part_create: 'Disbursement part create'
     purchase_payment_update: 'Edit the payment'
     purchase_payments:
-      one: 'One'
-      other: 'Other'
-      zero: 'Zero'
+      one: '%{count} disbursement'
+      other: '%{count} disbursements'
     purchase_payments_states:
       all: 'All'
       undelivered: 'Undelivered'
@@ -1087,7 +1081,7 @@ eng:
     submit: 'Submit'
     subscriber_period: 'Subscribed on %{subscribed_on}'
     subscriber_quantity: 'Subscribed at the number %{subscribed_on}'
-    subscription_nature: 'Subscription nature'
+    subscription_nature: 'Subscription type'
     subscription_natures_down: 'Decrement actual number (-1)'
     subscription_natures_up: 'Increment actual number (+1)'
     subscriptions: 'Abonnements'
