--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -37,7 +37,7 @@ eng:
       journal_entry:
         closed: 'Closed'
       journal_record:
-        purchase_payment_parts: 'Parts or purchase payments'
+        purchase_payment_parts: 'Parts or disbursements'
       location:
         children: 'Sub-warehouse'
         product: 'Contained product'
@@ -61,7 +61,7 @@ eng:
         label: 'Purchase order'
         lines: 'Purhase order lines'
         moved_on: 'Recevied on'
-        payment_parts: 'Parts of purchase payments'
+        payment_parts: 'Parts of disbursements'
         planned_on: 'Reception on'
       purchase_order_line:
         order: 'Purchase order'
@@ -70,7 +70,7 @@ eng:
         amount: 'Amount'
         delivered: 'Given to recipient'
       purchase_payment_mode:
-        payments: 'Purchase payments'
+        payments: 'Disbursements'
       purchase_payment_part:
         amount: 'Amount'
       sale_order:
@@ -213,7 +213,7 @@ eng:
           location_can_not_waste_product: 'You can not register a loss of %{product} in %{location}, it already contains %{contained_product}'
           locations_can_not_be_identical: 'Locations can not be identical'
         subscription:
-          entity_must_be_the_same_as_the_contact_entity: 'Entity must be the same as the contact entity'
+          entity_must_be_the_same_as_the_contact_entity: 'Person must be the same as the contact person'
         tax_declaration:
           declaration_date_after_period: 'Declaration date must be after concerned period'
           one_data_to_record_tax_declaration: 'One data to record tax declaration'
@@ -244,14 +244,14 @@ eng:
       document: 'Document'
       document_template: 'Document template'
       embankment: 'Transit Letter'
-      entity: 'Entity'
-      entity_category: 'Entity category'
-      entity_link: 'Entity link'
-      entity_link_nature: 'Entity link nature'
-      entity_nature: 'Entity nature'
+      entity: 'Person'
+      entity_category: 'Person category'
+      entity_link: 'Person link'
+      entity_link_nature: 'Person link type'
+      entity_nature: 'Person type'
       establishment: 'Establishment'
       event: 'Event'
-      event_nature: 'Event nature'
+      event_nature: 'Event type'
       financialyear: 'Financial year'
       inventory: 'Inventory'
       inventory_line: 'Inventory line'
@@ -268,7 +268,7 @@ eng:
       observation: 'Observation'
       operation: 'Operation'
       operation_line: 'Operation line'
-      operation_nature: 'Operation nature'
+      operation_nature: 'Operation type'
       parameter: 'Parameter'
       price: 'Price'
       product: 'Product'
@@ -276,13 +276,13 @@ eng:
       profession: 'Profession'
       purchase_order: 'Purchase order'
       purchase_order_line: 'Purchase order line'
-      purchase_payment: 'Purchase payment'
-      purchase_payment_mode: 'Purchase payment mode'
-      purchase_payment_part: 'Purchase payment part'
+      purchase_payment: 'Disbursement'
+      purchase_payment_mode: 'Disbursement mode'
+      purchase_payment_part: 'Disbursement part'
       role: 'Role'
       sale_order: 'Sale order'
       sale_order_line: 'Sale order line'
-      sale_order_nature: 'Sale order nature'
+      sale_order_nature: 'Sale order type'
       sale_payment: 'Sale payment'
       sale_payment_mode: 'Sale payment mode'
       sale_payment_part: 'Sale payment part'
@@ -293,7 +293,7 @@ eng:
       stock_move: 'Stock move'
       stock_transfer: 'Stock transfer'
       subscription: 'Subscription'
-      subscription_nature: 'Subscription nature'
+      subscription_nature: 'Subscription type'
       tax: 'Tax'
       tax_declaration: 'Tax declaration'
       tool: 'Tool'
@@ -501,25 +501,25 @@ eng:
     employed: 'Employed'
     employees: 'Employees'
     employment: 'Employment'
-    entities: 'Entities'
-    entity: 'Entity'
-    entity_1: 'Entity 1'
-    entity_1_id: 'Entity 1'
-    entity_2: 'Entity 2'
-    entity_2_id: 'Entity 2'
-    entity_categories: 'Entity categories'
-    entity_id: 'Entity'
-    entity_link_nature: 'Entity link nature'
-    entity_link_nature_id: 'Entity link nature'
-    entity_link_natures: 'Entity link natures'
-    entity_links: 'Entity links'
-    entity_name: 'Entity name'
-    entity_natures: 'Entity natures'
+    entities: 'People'
+    entity: 'Person'
+    entity_1: 'Person 1'
+    entity_1_id: 'Person 1'
+    entity_2: 'Person 2'
+    entity_2_id: 'Person 2'
+    entity_categories: 'Person categories'
+    entity_id: 'Person'
+    entity_link_nature: 'Person link type'
+    entity_link_nature_id: 'Person link type'
+    entity_link_natures: 'Person link types'
+    entity_links: 'Person links'
+    entity_name: 'Person name'
+    entity_natures: 'Person types'
     entries: 'Entries'
     establishment: 'Establishment'
     establishment_id: 'Establishment'
     establishments: 'Establishments'
-    event_natures: 'Event natures'
+    event_natures: 'Event types'
     events: 'Events'
     excise: 'Excise'
     expense: 'Expense'
@@ -587,7 +587,7 @@ eng:
     item_listing_id: 'Item listing'
     item_listing_node: 'Item listing node'
     item_listing_node_id: 'Item listing node'
-    item_nature: 'Item nature'
+    item_nature: 'Item type'
     item_value: 'Item value'
     items: 'Items'
     journal: 'Journal'
@@ -649,10 +649,10 @@ eng:
     name: 'Name'
     name_1_to_2: 'Name 1 to 2'
     name_2_to_1: 'Name 2 to 1'
-    nature: 'Nature'
-    nature_code: 'Nature code'
-    nature_id: 'Nature'
-    nature_label: 'Nature label'
+    nature: 'Type'
+    nature_code: 'Type code'
+    nature_id: 'Type'
+    nature_label: 'Type label'
     nic: 'Nic'
     node: 'Node'
     node_id: 'Node'
@@ -666,7 +666,7 @@ eng:
     operation: 'Operation'
     operation_id: 'Operation'
     operation_lines: 'Operation lines'
-    operation_natures: 'Operation natures'
+    operation_natures: 'Operation types'
     operations: 'Operations'
     order: 'Order'
     order_id: 'Order'
@@ -742,9 +742,9 @@ eng:
     published: 'Published'
     purchase_order_lines: 'Purchase order lines'
     purchase_orders: 'Purchase orders'
-    purchase_payment_modes: 'Purchase payment modes'
-    purchase_payment_parts: 'Purchase payment parts'
-    purchase_payments: 'Purchase payments'
+    purchase_payment_modes: 'Disbursement modes'
+    purchase_payment_parts: 'Disbursement parts'
+    purchase_payments: 'Disbursements'
     purchases_account: 'Purchases account'
     purchases_account_id: 'Purchases account'
     quantity: 'Quantity'
@@ -790,7 +790,7 @@ eng:
     sale_order_id: 'Sale order'
     sale_order_line_id: 'Sale order line'
     sale_order_lines: 'Sale order lines'
-    sale_order_natures: 'Sale order natures'
+    sale_order_natures: 'Sale order types'
     sale_orders: 'Sale orders'
     sale_payment_modes: 'Sale payment modes'
     sale_payment_parts: 'Sale payment parts'
@@ -838,9 +838,9 @@ eng:
     string_value: 'String value'
     subdir: 'Subdir'
     subject: 'Subject'
-    subscription_nature: 'Subscription nature'
-    subscription_nature_id: 'Subscription nature'
-    subscription_natures: 'Subscription natures'
+    subscription_nature: 'Subscription type'
+    subscription_nature_id: 'Subscription type'
+    subscription_natures: 'Subscription types'
     subscription_period: 'Subscription period'
     subscription_quantity: 'Subscription quantity'
     subscriptions: 'Subscriptions'
@@ -865,7 +865,7 @@ eng:
     template: 'Template'
     template_id: 'Template'
     text_importance: 'Text importance'
-    text_nature: 'Text nature'
+    text_nature: 'Text type'
     text_state: 'Text state'
     theoric_quantity: 'Theoric quantity'
     title: 'Title'
@@ -899,7 +899,7 @@ eng:
     updated_at: 'Updated at'
     updater: 'Updater' #!
     updater_id: 'Updater'
-    usable_purchase_payments: 'Usable purchase payments'
+    usable_purchase_payments: 'Usable disbursements'
     usable_sale_payments: 'Usable sale payments'
     usage: 'Usage'
     usage_duration: 'Usage duration'
@@ -1107,7 +1107,7 @@ eng:
         relations: 'Relationships'
         resources: 'Resources'
       invalid_filename: 'File'
-      nature_do_not_allow_to_use_attributes: 'The nature does not allow to use attributes'
+      nature_do_not_allow_to_use_attributes: 'The type does not allow to use attributes'
       natures:
         balance: 'Balance'
         balance_sheet: 'Balance sheet'
