--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -365,7 +365,7 @@ fra:
     cashes:
       one: '1 compte bancaire'
       other: '%{count} comptes bancaires'
-      zero: '0 compte bancaire'
+      zero: '0 compte bancaire' #!
     catalog: 'Description pour catalogue'
     category: 'Catégorie'
     category_name: 'Catégorie'
@@ -410,7 +410,7 @@ fra:
     contacts:
       one: '%{count} contact'
       other: '%{count} contacts'
-      zero: '0 contact'
+      zero: '0 contact' #!
     contains: 'Contient'
     coordinates: 'Coordonnées de l''abonnement'
     copy_of: 'Copie de %{source}'
@@ -480,7 +480,7 @@ fra:
     entity_links:
       one: '%{count} lien'
       other: '%{count} liens'
-      zero: '0 lien'
+      zero: '0 lien' #!
     entity_print: 'Imprimer la fiche'
     entity_to_delete: 'Doublon à fusionner (et faire disparaitre)'
     entity_to_update: 'Fiche à mettre à jour avec les éléments du doublon'
@@ -628,7 +628,7 @@ fra:
     mandates:
       one: '%{count} responsabilité'
       other: '%{count} responsabilités '
-      zero: '0 responsabilité'
+      zero: '0 responsabilité' #!
     mandates_fields: 'Vous devez saisir au moins une valeur dans l''un des champs'
     mandates_filters: 'Vous devez saisir au moins une valeur de recherche pour un des champs'
     mandates_new_fields: 'Vous devez saisir au moins une valeur dans l''un des champs de modification'
@@ -756,7 +756,7 @@ fra:
     observations:
       one: '%{count} observation'
       other: '%{count} observations'
-      zero: '0 observation'
+      zero: '0 observation' #!
     on_account: 'À remettre sur le compte'
     one_condition: 'au moins une condition'
     operation_lines: 'Intrants et sortants'
@@ -838,7 +838,7 @@ fra:
     purchase_payments:
       one: '%{count} décaissement'
       other: '%{count} décaissements'
-      zero: '0 décaissement'
+      zero: '0 décaissement' #!
     purchase_payments_states:
       all: 'Tous'
       undelivered: 'Non délivrés'
