--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -12,13 +12,13 @@ jpn:
       #>bank_statement_create: 'Create a new account statement'
       #>bank_statement_point: 'Point bank statement %{number}'
       #>bank_statement_update: 'Update bank statement %{number}'
-      #>bank_statements: 'Statement of Bank Accounts'
+      #>bank_statements: 'Bank statements'
       #>cash: '%{nature_label}: %{name}'
       #>cash_create: 'Add a new cash'
       #>cash_update: 'Update cash: %{name}'
       #>cashes: 'Cash'
       #>document_prepare: 'Choose the type of documents to print'
-      #>document_print: 'print, exportation'
+      #>document_print: 'Prints, exportations'
       #>draft_entries: 'Draft'
       #>financialyear: 'Period %{code}'
       #>financialyear_close: 'Close period'
@@ -134,14 +134,14 @@ jpn:
       #>purchase_order_summary: 'Payments of the purchase order %{number}'
       #>purchase_order_update: 'Edit the purchase order: %{number}'
       #>purchase_orders: 'Purchase orders'
-      #>purchase_payment: 'Purchase payment #%{number} for %{payee}'
-      #>purchase_payment_create: 'Add a new purchase payment'
-      #>purchase_payment_mode_create: 'Add a new purchase payment mode'
-      #>purchase_payment_mode_update: 'Edit the purchase payment mode'
-      #>purchase_payment_modes: 'Purchase payments modes'
+      #>purchase_payment: 'Disbursement #%{number} for %{payee}'
+      #>purchase_payment_create: 'Add a new disbursement'
+      #>purchase_payment_mode_create: 'Add a new disbursement mode'
+      #>purchase_payment_mode_update: 'Edit the disbursement mode'
+      #>purchase_payment_modes: 'Disbursements modes'
       #>purchase_payment_part_create: 'Pay the purchase order %{number}'
-      #>purchase_payment_update: 'Edit the purchase payment: %{number}'
-      #>purchase_payments: 'Purchase payments'
+      #>purchase_payment_update: 'Edit the disbursement: %{number}'
+      #>purchase_payments: 'Disbursements'
       #>sale_order: 'Sale order %{number}'
       #>sale_order_create: 'New sale order'
       #>sale_order_deliveries: 'Deliveries'
@@ -149,8 +149,8 @@ jpn:
       #>sale_order_line_update: 'Edit sale order line'
       #>sale_order_lines: 'Selection of the products for the estimate %{sale_order}'
       #>sale_order_nature_create: 'Add a new type of sale'
-      #>sale_order_nature_update: 'Edit the sale order nature: %{name}'
-      #>sale_order_natures: 'Sale order natures'
+      #>sale_order_nature_update: 'Edit the sale order type: %{name}'
+      #>sale_order_natures: 'Sale order types'
       #>sale_order_summary: 'Invoice and payments of the sale order %{number}'
       #>sale_order_update: 'Edit the sale order %{number}'
       #>sale_orders: 'Estimates and orders'
@@ -173,10 +173,10 @@ jpn:
       #>stock_transfer_update: 'Edit the stock transfer/loss'
       #>stock_transfers: 'Transfers and loss'
       #>stocks: 'Stocks state'
-      #>subscription_create: 'Add anew subscription'
-      #>subscription_nature_create: 'Add a new subscription nature'
-      #>subscription_nature_update: 'Edit the subscription nature: %{name}'
-      #>subscription_natures: 'Subscription natures'
+      #>subscription_create: 'Add a new subscription'
+      #>subscription_nature_create: 'Add a new subscription type'
+      #>subscription_nature_update: 'Edit the subscription type: %{name}'
+      #>subscription_natures: 'Subscription types'
       #>subscription_update: 'Update subscription: %{number} from %{start} to %{finish}'
       #>subscriptions: 'Subscriptions'
       #>tracking: 'Tracking: %{name}'
@@ -289,7 +289,7 @@ jpn:
     #>account_supplier_to_create: 'Account supplier to create'
     account_tabbox:
       #>children: 'Children Account'
-      #>entities: 'Entities'
+      #>entities: 'People'
       #>journal_entries: 'Entry Journal'
     #>account_tangible_fixed_assets: 'Tangible Fixed Assets'
     #>account_untangible_fixed_assets: 'Untangible Fixed Assets'
@@ -361,9 +361,8 @@ jpn:
       #>embankments: 'Transit Letters'
     #>cash_update: 'Update cash'
     cashes:
-      #>one: 'One'
-      #>other: 'Other'
-      #>zero: 'Zero'
+      #>one: '%{count} cash'
+      #>other: '%{count} cashes'
     #>catalog: 'Catalog'
     #>category: 'Category'
     #>category_name: 'Category'
@@ -406,9 +405,8 @@ jpn:
     #>consult: 'Consult'
     #>contact: 'At'
     contacts:
-      #>one: 'One'
-      #>other: 'Other'
-      #>zero: 'Zero'
+      #>one: '%{count} contact'
+      #>other: '%{count} contacts'
     #>contains: 'Contains'
     #>coordinates: 'Coordinates'
     #>copy_of: 'Copy of %{source}'
@@ -447,7 +445,7 @@ jpn:
     #>display: 'Display'
     display_help: '手伝い'
     #>district_x: '%{name} (%{code})'
-    #>document_natures: 'Document natures'
+    #>document_natures: 'Document types'
     #>document_templates: 'Document templates'
     #>dont_use_journal: '-- Do not use journal --'
     #>down: 'Down'
@@ -473,16 +471,15 @@ jpn:
     #>end: 'to'
     #>entities_export: 'Export as a CSV file'
     #>entities_import: 'Import a CSV file'
-    #>entities_merge: 'Entities merge'
+    #>entities_merge: 'People merge'
     #>entity_category_update: 'Update category'
     entity_links:
-      #>one: 'One'
-      #>other: 'Other'
-      #>zero: 'Zero'
-    #>entity_print: 'Entity print'
-    #>entity_to_delete: 'Entity to delete'
-    #>entity_to_update: 'Entity to update'
-    #>entity_update: 'Entity update'
+      #>one: '%{count} link'
+      #>other: '%{count} links'
+    #>entity_print: 'Person print'
+    #>entity_to_delete: 'Person to delete'
+    #>entity_to_update: 'Person to update'
+    #>entity_update: 'Person update'
     #>entries: 'Entries'
     #>entries_to_point: 'Entries pointing to'
     error_no_file: 'ページ(%{article})はありません。'
@@ -624,9 +621,8 @@ jpn:
     #>management_index: 'Management index'
     #>management_rights: 'Management'
     mandates:
-      #>one: 'One mandate'
+      #>one: '%{count} mandate'
       #>other: '%{count} mandates'
-      #>zero: 'No mandates'
     #>mandates_fields: 'You have to fill at least one field'
     #>mandates_filters: 'You have to fill at least one filter'
     #>mandates_new_fields: 'You have to fill at least one new field'
@@ -664,7 +660,7 @@ jpn:
     #>national_normal_vat_collected: 'National Normal Tax collected'
     #>national_reduce_vat_collected: 'National Reduced Tax collected'
     #>national_vat_collected: 'National Tax collected'
-    #>nature: 'Nature'
+    #>nature: 'Type'
     nb_enbankments:
       #>one: '%{count} transit letter to validate'
       #>other: '%{count} transit letters to validate'
@@ -752,9 +748,8 @@ jpn:
       #>warning: 'Warning!'
     #>number: 'Number'
     observations:
-      #>one: 'One'
-      #>other: 'Other'
-      #>zero: 'Zero'
+      #>one: '%{count} observation'
+      #>other: '%{count} observations'
     #>on_account: 'On account'
     #>one_condition: 'One condition'
     #>operation_lines: 'Incoming and outgoing products'
@@ -831,12 +826,11 @@ jpn:
     #>purchase_order_price_create: 'Add a new purchase price'
     #>purchase_order_update: 'Purchase order update'
     #>purchase_orders: 'Purchase orders'
-    #>purchase_payment_part_create: 'Purchase payment part create'
+    #>purchase_payment_part_create: 'Disbursement part create'
     #>purchase_payment_update: 'Edit the payment'
     purchase_payments:
-      #>one: 'One'
-      #>other: 'Other'
-      #>zero: 'Zero'
+      #>one: '%{count} disbursement'
+      #>other: '%{count} disbursements'
     purchase_payments_states:
       #>all: 'All'
       #>undelivered: 'Undelivered'
@@ -963,7 +957,7 @@ jpn:
     #>submit: 'Submit'
     #>subscriber_period: 'Subscribed on %{subscribed_on}'
     #>subscriber_quantity: 'Subscribed at the number %{subscribed_on}'
-    #>subscription_nature: 'Subscription nature'
+    #>subscription_nature: 'Subscription type'
     #>subscription_natures_down: 'Decrement actual number (-1)'
     #>subscription_natures_up: 'Increment actual number (+1)'
     #>subscriptions: 'Abonnements'
